log
Thu 14 Sep 2023 04:24:13 AM UTC: 
 tests:  1|8
total_score: 0/70
344db7a
Thu 14 Sep 2023 04:40:27 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
89e83e3
Thu 14 Sep 2023 04:40:41 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:3: error: ‘new’ undeclared (first use in this function)
   41 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:41:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6e5b292
